--- a/app/views/account/main.html.erb
+++ b/app/views/account/main.html.erb
@@ -51,6 +51,8 @@
 					<li><a href="/admin/sales" title="实体店信息" target="main">实体店信息</a></li>
 					<li><a href="/admin/guestbooks" title="留言薄" target="main">故障保修</a></li>
 					<li><a href="/admin/faqs" title="常见问题" target="main">常见问题</a></li>
+					<li><a href="/admin/sys/flashpics" title="首页图片轮播" target="main">首页图片轮播</a></li>
+					<li><a href="/admin/sys/index_ads" title="首页图片广告" target="main">首页图片广告</a></li>
 					<li><a href="/admin/friendlinks" title="友情链接" target="main">友情链接</a></li>
 				</ul>
 			</div>
