--- a/app/views/admin/friendlinks/index.html.erb
+++ b/app/views/admin/friendlinks/index.html.erb
@@ -6,14 +6,15 @@
 		</div>
 	</div>
 </div>
-<%= form_tag "/admin/friendlinks/batch_update" do |f| %>
 <div class="main">
+<%= form_tag "/admin/friendlinks/batch_update" do |f| %>
 <table class="stdtable edtable">
 	<thead>
 		<tr>
 			<th width="10%">编号</th>
+			<th width="20%">图片</th>
 			<th>名称</th>
-			<th width="30%">链接</th>
+			<th width="20%">链接</th>
 			<th width="10%">排序</th>
 			<th width="20%">管理</th>
 		</tr>
@@ -27,8 +28,9 @@
 	%>
 		<tr>
 			<td><%= friendlink.id %></td>
-			<td><%= text_field "friendlink[#{friendlink.id}]", :title, :style => "width:240px", :value => friendlink.title %></td>
-			<td><%= text_field "friendlink[#{friendlink.id}]", :link, :style => "width:240px", :value => friendlink.link %></td>
+			<td><img src="<%= friendlink.img_url %>" /></td>
+			<td><%= text_field "friendlink[#{friendlink.id}]", :title, :style => "width:180px", :value => friendlink.title %></td>
+			<td><%= text_field "friendlink[#{friendlink.id}]", :link, :style => "width:180px", :value => friendlink.link %></td>
 			<td><%= text_field "friendlink[#{friendlink.id}]", :rank, :style => "width:80px", :value => friendlink.rank %></td>
 			<td>
 				<%= link_to "删除", {:action => "destroy", :id => friendlink}, :confirm => "确定删除？", :method => "delete" %>
@@ -40,7 +42,7 @@
 	</tbody>
 	<tfoot>		
 		<tr>
-			<td class="data_sbt" colspan="5">
+			<td class="data_sbt" colspan="6">
 				<input type="submit" name="submit" value="保存" />
 			</td>
 		</tr>
@@ -57,5 +59,5 @@
 		end
 	%>
 </table>
-</div>
 <% end %>
+</div>
