--- a/app/views/admin/sys/flashpics.html.erb
+++ b/app/views/admin/sys/flashpics.html.erb
@@ -1,5 +1,6 @@
-<%= form_tag :action => "flashpics" do %>	
-<table class="setTable">
+<%= javascript_include_tag "kindeditor" %>
+<%= form_tag :action => "flashpics" do %>
+<table class="newtable">
 	<thead>
 		<tr>
 			<th colspan="2">首页图片轮播</th>
@@ -9,26 +10,25 @@
 		<tr>
 			<td colspan="2" class="blank"></td>
 		</tr>
+		<% 1.upto 4 do |i| %>
 		<tr>
+			<td class="data_label">图片地址<%= i %>：</td>
 			<td>
-				图片地址：
-				<input type="text" name="sys_setting[setting][img_url][0]" value="<%= @setting["img_url"][0] if @setting["img_url"] %>" class="new_ipt" />
-			</td>
-			<td>
-				链接地址：
-				<input type="text" name="sys_setting[setting][link_url][0]" value="<%= @setting["link_url"][0] if @setting["link_url"] %>" class="new_ipt" />	
+				<input type="text" name="sys_setting[setting][img_url][<%= i %>]" value="<%= @setting["img_url"][i.to_s] %>" class="new_ipt" />
+				<span class="ke-button-common ke-button-outer"><input type="button" class="ke-button-common ke-button viewServer" name="viewServer" value="图片空间"></span>
+				<span class="ke-button-common ke-button-outer"><input type="button" class="ke-button-common ke-button upload" name="upload" value="本地上传"></span>
 			</td>
 		</tr>
 		<tr>
-			<td>
-				图片地址：
-				<input type="text" name="sys_setting[setting][img_url][1]" value="<%= @setting["img_url"][1] if @setting["img_url"] %>" class="new_ipt" />
-			</td>
-			<td>
-				链接地址：
-				<input type="text" name="sys_setting[setting][link_url][1]" value="<%= @setting["link_url"][1] if @setting["link_url"] %>" class="new_ipt" />	
+			<td class="data_label">链接地址<%= i %>：</td>
+			<td class="data_ipt">
+				<input type="text" name="sys_setting[setting][link_url][<%= i %>]" value="<%= @setting["link_url"][i.to_s] %>" style="width:400px;" />
 			</td>
 		</tr>
+		<tr>
+			<td colspan="2" class="blank"></td>
+		</tr>
+		<% end %>
 		<tr>
 			<td>&nbsp;</td>
 			<td class="data_sbt">
@@ -50,3 +50,50 @@
 	</tbody>
 </table>
 <% end %>
+
+<script type="text/javascript">
+//<![CDATA[
+$(function(){	
+	var editor = new KindEditor.EditorClass();
+	editor.fileManagerJson = "/file_manager_json";
+	editor.uploadJson = "/upload_asset";
+	editor.extraFileUploadParams = {
+		'model_type' : 'flashpic'
+	};
+	KindEditor.loadStyle(editor.themesPath + 'default/default.css');
+	KindEditor.loadScript(editor.langPath + editor.langType + '.js');
+	
+	$('.viewServer').click(function(){
+		var p = this;
+		editor.loadPlugin('filemanager', function() {
+			editor.plugin.filemanagerDialog({
+				viewType : 'VIEW',
+				dirName : 'slide',
+				clickFn : function(url, title) {
+					if (editor.dialogs.length > 0) {
+						$(p).parent().siblings('input').val(url);
+						editor.hideDialog();
+					}
+				}
+			});
+		});
+	});
+	
+	$('.upload').click(function(){
+		var p = this;
+		editor.loadPlugin('image', function() {
+			editor.plugin.imageDialog({
+				showRemote: false,
+				clickFn : function(url, title, width, height, border, align) {
+					$(p).parent().siblings('input').val(url);
+					setTimeout(function() {
+						editor.hideDialog().focus();
+					}, 0);
+				}
+			});
+		});
+	});
+		
+});
+//]]>
+</script>
