--- a/app/views/admin/sys/index_ads.html.erb
+++ b/app/views/admin/sys/index_ads.html.erb
@@ -1,5 +1,6 @@
-<%= form_tag :action => "index_ads" do %>	
-<table class="setTable">
+<%= javascript_include_tag "kindeditor" %>
+<%= form_tag :action => "index_ads" do %>
+<table class="newtable">
 	<thead>
 		<tr>
 			<th colspan="2">首页图片广告</th>
@@ -9,36 +10,31 @@
 		<tr>
 			<td colspan="2" class="blank"></td>
 		</tr>
+		<% 1.upto 3 do |i| %>
 		<tr>
-			<td class="data_label">网站名称：</td>
-			<td class="data_ipt">
-				<input type="text" name="sys_setting[setting][site_name]" value="<%= @setting["site_name"] %>" />
+			<td class="data_label">图片地址<%= i %>：</td>
+			<td>
+				<input type="text" name="sys_setting[setting][img_url][<%= i %>]" value="<%= @setting["img_url"][i.to_s] %>" class="new_ipt" />
+				<span class="ke-button-common ke-button-outer"><input type="button" class="ke-button-common ke-button viewServer" name="viewServer" value="图片空间"></span>
+				<span class="ke-button-common ke-button-outer"><input type="button" class="ke-button-common ke-button upload" name="upload" value="本地上传"></span>
 			</td>
 		</tr>
 		<tr>
-			<td class="data_label">站点默认关键字：</td>
+			<td class="data_label">链接地址<%= i %>：</td>
 			<td class="data_ipt">
-				<textarea name="sys_setting[setting][site_keywords]"><%= @setting["site_keywords"] %></textarea>
+				<input type="text" name="sys_setting[setting][link_url][<%= i %>]" value="<%= @setting["link_url"][i.to_s] %>" style="width:400px;" />
 			</td>
 		</tr>
 		<tr>
-			<td class="data_label">站点描述：</td>
+			<td class="data_label">说明<%= i %>：</td>
 			<td class="data_ipt">
-				<textarea name="sys_setting[setting][site_desc]"><%= @setting["site_desc"] %></textarea>
+				<input type="text" name="sys_setting[setting][title][<%= i %>]" value="<%= @setting["title"][i.to_s] %>" class="new_ipt" />
 			</td>
 		</tr>
 		<tr>
-			<td class="data_label">版权：</td>
-			<td class="data_ipt">
-				<textarea name="sys_setting[setting][copyright]"><%= @setting["copyright"] %></textarea>
-			</td>
+			<td colspan="2" class="blank"></td>
 		</tr>
-		<tr>
-			<td class="data_label">备案号：</td>
-			<td class="data_ipt">
-				<input type="text" name="sys_setting[setting][beian]" value="<%= @setting["beian"] %>" />
-			</td>
-		</tr>
+		<% end %>
 		<tr>
 			<td>&nbsp;</td>
 			<td class="data_sbt">
@@ -60,3 +56,50 @@
 	</tbody>
 </table>
 <% end %>
+
+<script type="text/javascript">
+//<![CDATA[
+$(function(){	
+	var editor = new KindEditor.EditorClass();
+	editor.fileManagerJson = "/file_manager_json";
+	editor.uploadJson = "/upload_asset";
+	editor.extraFileUploadParams = {
+		'model_type' : 'index_ad'
+	};
+	KindEditor.loadStyle(editor.themesPath + 'default/default.css');
+	KindEditor.loadScript(editor.langPath + editor.langType + '.js');
+	
+	$('.viewServer').click(function(){
+		var p = this;
+		editor.loadPlugin('filemanager', function() {
+			editor.plugin.filemanagerDialog({
+				viewType : 'VIEW',
+				dirName : 'slide',
+				clickFn : function(url, title) {
+					if (editor.dialogs.length > 0) {
+						$(p).parent().siblings('input').val(url);
+						editor.hideDialog();
+					}
+				}
+			});
+		});
+	});
+	
+	$('.upload').click(function(){
+		var p = this;
+		editor.loadPlugin('image', function() {
+			editor.plugin.imageDialog({
+				showRemote: false,
+				clickFn : function(url, title, width, height, border, align) {
+					$(p).parent().siblings('input').val(url);
+					setTimeout(function() {
+						editor.hideDialog().focus();
+					}, 0);
+				}
+			});
+		});
+	});
+		
+});
+//]]>
+</script>
