--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
 			<a href="/"></a>
 		</div>
 		<div class="lang">
-			<a href="?locale=zh">中文</a>|<a href="?locale=en">English</a>
+			<a href="/zh">中文</a>|<a href="/en">English</a>
 		</div>
 		<div id="navlist">
 			<ul>
