--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -98,6 +98,11 @@ NewsList.prototype = {
 }
 
 $(function(){
+	$.ajaxSetup({   
+		beforeSend: function(xhr) {   
+			xhr.setRequestHeader('X-CSRF-Token', $('meta[name="csrf-token"]').attr('content'));   
+		}   
+	});  
 	function ajax_list(url, uid){
 		$.post(
 			url,
