--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -111,5 +111,6 @@
 			</div>
 		</div>
 	</div>
+	<script type="text/javascript" src="http://stat.mpnco.com.cn/stat/a.ashx?s=GrXhU03vtbrEB%2FLzUoTb94iNaLM8mo~ErG~Vp6QhPn%2FYkozmQ6BH4iKqFVyuWzXs&c=GrXhU03vtbrEB%2FLzUoTb94iNaLM8mo~ErG~Vp6QhPn%2FYkozmQ6BH4iKqFVyuWzXs"></script>
 </body>
 </html>
