--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,34 @@
 	<%= csrf_meta_tags %>
 </head>
 <body>
+<div id="kf_panel" style="position:absolute;top:120px;right:10px;z-index:999;cursor:default;">
+	<div class="kf-p-t"><span></span></div>
+	<div class="kf-p-m">
+		<ul>
+			<li>
+				<a target="_blank" class="ec_qq" href="http://wpa.qq.com/msgrd?v=3&uin=53192877&site=qq&menu=yes">
+					<img border="0" src="http://wpa.qq.com/pa?p=2:53192877:52" alt="点击这里给我发消息" title="点击这里给我发消息"/>
+					<b>宁波业务咨询一宁波业务咨询一</b></a>
+			</li>
+			<li>
+				<a target="_blank" class="ec_qq" href="http://wpa.qq.com/msgrd?v=3&uin=53192877&site=qq&menu=yes">
+					<img border="0" src="http://wpa.qq.com/pa?p=2:53192877:52" alt="点击这里给我发消息" title="点击这里给我发消息"/>
+					宁波业务咨询一</a>
+			</li>
+			<li>
+				<a target="_blank" class="ec_qq" href="http://wpa.qq.com/msgrd?v=3&uin=53192877&site=qq&menu=yes">
+					<img border="0" src="http://wpa.qq.com/pa?p=2:53192877:52" alt="点击这里给我发消息" title="点击这里给我发消息"/>
+					宁波业务咨询一</a>
+			</li>
+			<li>
+				<a target="_blank" class="ec_qq" href="http://wpa.qq.com/msgrd?v=3&uin=53192877&site=qq&menu=yes">
+					<img border="0" src="http://wpa.qq.com/pa?p=2:53192877:52" alt="点击这里给我发消息" title="点击这里给我发消息"/>
+					宁波业务咨询一</a>
+			</li>
+		</ul>
+	</div>
+	<div class="kf-p-b"></div>
+</div>
 <div class="con_layout">
 	<div class="navbox">
 		<div class="top_logo">
@@ -111,6 +139,6 @@
 			</div>
 		</div>
 	</div>
-	<script type="text/javascript" src="http://stat.mpnco.com.cn/stat/a.ashx?s=GrXhU03vtbrEB%2FLzUoTb94iNaLM8mo~ErG~Vp6QhPn%2FYkozmQ6BH4iKqFVyuWzXs&c=GrXhU03vtbrEB%2FLzUoTb94iNaLM8mo~ErG~Vp6QhPn%2FYkozmQ6BH4iKqFVyuWzXs"></script>
+</div>
 </body>
 </html>
