--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,8 @@
 	<%= csrf_meta_tags %>
 </head>
 <body>
-<div id="kf_panel" style="position:absolute;top:120px;right:10px;z-index:999;cursor:default;">
-	<div class="kf-p-t"><span></span></div>
+<div id="kf_panel" style="top:120px;right:10px;">
+	<div class="kf-p-t"><span id="kf_p_cls"></span></div>
 	<div class="kf-p-m">
 		<ul>
 			<li>
@@ -20,8 +20,8 @@
 					<b>宁波业务咨询一宁波业务咨询一</b></a>
 			</li>
 			<li>
-				<a target="_blank" class="ec_qq" href="http://wpa.qq.com/msgrd?v=3&uin=53192877&site=qq&menu=yes">
-					<img border="0" src="http://wpa.qq.com/pa?p=2:53192877:52" alt="点击这里给我发消息" title="点击这里给我发消息"/>
+				<a href="msnim:chat?contact=wangsdong@aspprogram.cn" tareget="_blank">
+					<img border="0" src="/assets/cslist/msn.png" alt="点击这里给我发消息" title="点击这里给我发消息"/>
 					宁波业务咨询一</a>
 			</li>
 			<li>
@@ -35,6 +35,10 @@
 					宁波业务咨询一</a>
 			</li>
 		</ul>
+		<div class="kf-p-logo">
+			<a href="#"><img src="/assets/cslist/logo.jpg" /></a>
+			<p>打造中国移动电源第一品牌</p>
+		</div>
 	</div>
 	<div class="kf-p-b"></div>
 </div>
