--- a/app/views/admin/kfs/_form.html.erb
+++ b/app/views/admin/kfs/_form.html.erb
@@ -1,8 +1,8 @@
 <div class="nav">
 	<div class="list-opts">
 		<div class="nav-links">
-			<a href="/admin/kfs">FAQs</a>
-			<a href="/admin/kfs/new">添加 FAQ</a>
+			<a href="/admin/kfs">在线客服</a>
+			<a href="/admin/kfs/new">添加客服</a>
 		</div>
 	</div>
 </div>
