--- a/app/views/account/main.html.erb
+++ b/app/views/account/main.html.erb
@@ -38,6 +38,7 @@
 					<li><a href="/admin/product_catalogs" title="产品分类管理" target="main">产品分类管理</a></li>
 					<li><a href="/admin/products" title="产品管理" target="main">产品管理</a></li>
 					<li><a href="/admin/products/new" title="添加产品" target="main">添加产品</a></li>
+					<li><a href="/admin/product_orders" title="产品订购" target="main">产品订购</a></li>
 				</ul>
 			</div>
 			<div class="navtree-list" style="display:none;">
