--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -15,6 +15,7 @@
 					<a href="javascript:;"><img src="<%= img.addr %>" /></a>
 					<% end %>
 				</div>
+				<a href="<%= @product.order_url %>" class="product-order"><img src="/assets/btn_buy.png" /></a>
 			</div>
 			<script type="text/javascript" src="/assets/jquery.soChange.js"></script>
 			<% else %>
