--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -233,14 +233,14 @@ th:100%; background-repeat:repeat-y; }
 .sale_list li div.hover a.pic{display:inline-block; height:25px; line-height:25px; background:url(/assets/pic.gif) no-repeat left center; text-indent:20px; float:right;}
 */
 .sale-list{margin:0 0 0 20px;width:220px;}
-.sale-list-t{}
-.sale-list ul{}
+.sale-list-t{padding:8px 0 8px 20px;height:20px;line-height:20px;background:url(/assets/sales_t_bg.png) no-repeat;color:#FFF;}
+.sale-list ul{margin-top:10px;}
 .sale-list ul li{padding:4px 0;}
 .sale-list ul li b{line-height:28px;font-size:14px;font-weight:bold;}
 .sale-list ul li table{width:100%;border:0;border-collapse:collapse;border-spacing:0;}
 .sale-list ul li td{line-height:22px;vertical-align: top;}
 .sale-list ul li td.sale-label{width:65px;}
-.sale-list ul li td a{display:block;}
+.sale-list ul li td a{margin:0 4px 0 0;}
 
 .map_pic{ width:652px; height:480px; background:url(/assets/map/map.gif) no-repeat; top:80px; left:30px;position:relative; z-index:1;}
 .map_pic h2{width:100%; height:24px; position:absolute; left:0; top:-60px; z-index:30; display:block;font-family:"Microsoft YaHei","微软雅黑"; font-weight:400; color:#333; font-size:18px;}
