--- a/app/views/sales/index.html.erb
+++ b/app/views/sales/index.html.erb
@@ -75,90 +75,15 @@
 		</div>
 	</div>
 	<div class="con_right sale_right" id="sale_right">
-		<!--div style="padding-left:30px;">
+		<div style="padding-left:30px;">
 			请选择左侧可选省份进行查找
-		</div-->
-		<div class="sale-list">
-			<div class="sale-list-t">上海销售网络</div>
-			<ul>
-				<li>
-					<b>上海旗舰店</b>
-					<table>
-						<tr>
-							<td class="sale-label">地&nbsp;&nbsp;&nbsp;&nbsp;址：</td>
-							<td>上海旗舰店上海旗舰店上海旗舰店上海旗舰店</td>
-						</tr>
-						<tr>
-							<td class="sale-label">电&nbsp;&nbsp;&nbsp;&nbsp;话：</td>
-							<td>021-12345678</td>
-						</tr>
-						<tr>
-							<td class="sale-label">在线客服：</td>
-							<td>
-								<a target="_blank" href="http://wpa.qq.com/msgrd?v=3&amp;uin=53192877&amp;site=qq&amp;menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2:53192877:51" alt="点击这里给我发消息" title="点击这里给我发消息"></a>
-								<a target="_blank" href="http://wpa.qq.com/msgrd?v=3&amp;uin=53192877&amp;site=qq&amp;menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2:53192877:51" alt="点击这里给我发消息" title="点击这里给我发消息"></a>
-							</td>
-						</tr>
-					</table>
-				</li>
-				<li>
-					<b>上海经销商</b>
-					<table>
-						<tr>
-							<td class="sale-label">地&nbsp;&nbsp;&nbsp;&nbsp;址：</td>
-							<td></td>
-						</tr>
-						<tr>
-							<td class="sale-label">电&nbsp;&nbsp;&nbsp;&nbsp;话：</td>
-							<td></td>
-						</tr>
-						<tr>
-							<td class="sale-label">在线客服：</td>
-							<td></td>
-						</tr>
-					</table>
-				</li>
-				<li>
-					<b>上海分销商</b>
-					<table>
-						<tr>
-							<td class="sale-label">地&nbsp;&nbsp;&nbsp;&nbsp;址：</td>
-							<td></td>
-						</tr>
-						<tr>
-							<td class="sale-label">电&nbsp;&nbsp;&nbsp;&nbsp;话：</td>
-							<td></td>
-						</tr>
-						<tr>
-							<td class="sale-label">在线客服：</td>
-							<td></td>
-						</tr>
-					</table>
-				</li>
-				<li>
-					<b>上海大卖场</b>
-					<table>
-						<tr>
-							<td class="sale-label">地&nbsp;&nbsp;&nbsp;&nbsp;址：</td>
-							<td></td>
-						</tr>
-						<tr>
-							<td class="sale-label">电&nbsp;&nbsp;&nbsp;&nbsp;话：</td>
-							<td></td>
-						</tr>
-						<tr>
-							<td class="sale-label">在线客服：</td>
-							<td></td>
-						</tr>
-					</table>
-				</li>
-			</ul>
 		</div>
 	</div>
 </div>
 
 <script type="text/javascript">
 var roomid = '';
+
 $(function(){
 	$.ajaxSetup({   
 		beforeSend: function(xhr) {   
@@ -216,9 +141,7 @@ $(function(){
 							arr.push('</a>');
 						}
 						if(info[t].msn){
-							arr.push('<a target="_blank" href="http://wpa.qq.com/msgrd?v=3&amp;uin=' + info[t].qq + '&amp;site=qq&amp;menu=yes">');
-							arr.push('<img border="0" src="http://wpa.qq.com/pa?p=2:' + info[t].qq + ':51" alt="点击这里给我发消息" title="点击这里给我发消息">');
-							arr.push('</a>');
+							arr.push('<a href="msnim:chat?contact=' + info[t].msn + '"><img border="0" src="/assets/msn_ico.png" alt="点击这里给我发消息" title="点击这里给我发消息"></a>');
 						}
 						arr.push('					</td>');
 						arr.push('				</tr>');
